--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,15 @@
+@import "vendor/libs";
+
 @import "helpers/variables";
 @import "helpers/mixins";
-@import "helpers/functions";
-@import "vendor/libs";
 @import "base/fonts";
-@import "base/general";
+
+@import "base/base";
+@import "base/typography";
+@import "base/form_elements";
+@import "base/btns";
+@import "base/container";
+@import "base/slider";
+
 @import "../blocks/components/components";
 @import "../blocks/modules/modules";
