--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -1,3 +1,47 @@
+@mixin container-fluid {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+@mixin container {
+    width: 100%;
+    padding: 0 $grid-unit*2;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1408px;
+
+    @media (max-width: $hd - 1px) and (min-width: $xl) {
+       max-width: 1216px;
+    }
+
+    @media (max-width: $xl - 1px) and (min-width: $l) {
+        max-width: 928px;
+    }
+
+    @media (max-width: $l - 1px) and (min-width: $md) {
+        max-width: 640px;
+    }
+
+    @media (max-width: $md - 1px) and (min-width: $s) {
+        max-width: 288px;
+    }
+}
+
+@mixin row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -$grid-unit*2;
+    margin-left: -$grid-unit*2;
+}
+
+
+
+
+
+
+
+
 @mixin box($width, $height : $width) {
     width: $width;
     height: $height;
