--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -11,10 +11,14 @@ $color-white: #ffffff;
 
 $color-primary: #222222;
 
-$color-selago: #F7F9FE;
 $color-razzmatazz: #F21F5B;
+$color-crimson: #d20c44;
+
+$color-selago: #F7F9FE;
 $color-iron: #D4D6D7;
+$color-silverSand: #C1C3C4;
 $color-doveGray: #6A6A6A;
+
 $color-royalBlue: #3951E7;
 $color-astronaut: #232473;
 $color-governorBay: #2E2FB2;
@@ -25,8 +29,13 @@ $font-primary: "OpenSans-Regular";
 $font-secondary: "OpenSans-Semibold";
 $font-tertiary: "Muller-Bold";
 
-//Calculation
+//Grid
 $grid-unit: 8px;
+$col-hd: $grid-unit*11;
+$col-xl: $grid-unit*9;
+$col-l: $grid-unit*6;
+$col-md: $grid-unit*10;
+$col-s: $grid-unit*6;
 
 //Animation
 $transition: .2s ease-in-out;
