header is added

--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -1,2 +1,7 @@
 @import "header/header";
+@import "header-additional/header-additional";
+@import "header-main/header-main";
+@import "main/main";
+@import "news/news";
+@import "slider/slider";
 @import "footer/footer";
