--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -1,1 +1,3 @@
-.button.button-mail.button-pink Отправить
+header.header
+	include ../header-additional/header-additional
+	include ../header-main/header-main
