--- a/src/styles/base/_btns.scss
+++ b/src/styles/base/_btns.scss
@@ -3,20 +3,17 @@
     display: inline-block;
     font-size: 16px;
     line-height: $grid-unit*3;
-    padding: 13px 24px;
+    padding: 11px 24px;
     text-align: center;
     text-decoration: none;
     border: 0;
+    border-radius: 50px;
     transition: $transition;
     cursor: pointer;
 
     &[disabled] {
         cursor: default;
         opacity: 0.5;
-    }
-
-    &-round {
-        border-radius: 50px;
     }
 
     &-block {
@@ -47,19 +44,22 @@
     }
 
     &-mail {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
+        span {
+            display: inline-block;
+            vertical-align: middle;
+        }
 
         &:before {
             content:'';
-            display: block;
+            display: inline-block;
+            vertical-align: middle;
             width: 16px;
             height: 16px;
-            background-image: url('dist/img/sprites/sprite.svg#ico_mail');
+            background-image: url('/img/sprites/sprite.svg#ico_mail');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
+            margin-right: 12px;
         }
     }
 }
