--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,126 +1,27 @@
 h1, .h1 {
-    font-size: 30px;
-    line-height: $grid-unit*4;
-    color: $color-black;
+    font-family: $font-tertiary;
+    font-size: 56px;
+    font-weight: bold;
+    line-height: $grid-unit*7;
+    letter-spacing: 0.01em;
     margin-top: 0;
-    margin-bottom: $grid-unit*2;
+    margin-bottom: $grid-unit*4;
 }
 
 h2, .h2 {
-    font-size: 26px;
-    line-height: $grid-unit*4;
-    color: $color-black;
-    margin-top: 0;
-    margin-bottom: $grid-unit;
-    letter-spacing: 0.33px;
-
-
-}
-
-h3, .h3 {
-    font-size: 20px;
-    line-height: $grid-unit*3;
-    color: $color-black;
-    margin-top: 0;
-    margin-bottom: $grid-unit;
-    letter-spacing: 0.25px;
-
-
-}
-
-h4, .h4 {
-    font-size: 18px;
-    line-height: $grid-unit*3;
-    color: $color-black;
-    margin-top: 0;
-    margin-bottom: $grid-unit;
-    letter-spacing: 0.23px;
-
-
-}
-
-h5, .h5 {
-    font-size: 16px;
-    line-height: $grid-unit*2;
-    color: $color-black;
-    margin-top: 0;
-    margin-bottom: $grid-unit;
-
-
-}
-
-h6, .h6 {
-    font-size: 14px;
-    line-height: $grid-unit*2;
-    color: $color-black;
-    margin-top: 0;
-    margin-bottom: $grid-unit;
-
-
-}
-
-.slogan {
     font-family: $font-tertiary;
-    font-style: italic;
-    font-size: 20px;
-    color: $color-silver;
-    line-height: $grid-unit*3;
-    margin-bottom: $grid-unit;
-    letter-spacing: 0.25px;
-
-}
-
-table {
-    border: none;
-    border-spacing: 0;
-    display: block;
-    overflow-x: scroll;
-
-
-    tr {
-        vertical-align: top;
-    }
-
-    thead {
-        font-family: $font-primary;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: $grid-unit*2;
-
-        td {
-            padding: $grid-unit  $grid-unit*3;
-            text-align: left;
-        }
-
-        tr td:first-of-type {
-            text-align: center;
-        }
-    }
-
-    tbody {
-
-        tr td:first-of-type {
-            text-align: center;
-        }
-
-        tr td {
-            padding: $grid-unit*2 $grid-unit*3;
-            max-width: 300px;
-        }
-
-        tr:nth-child(even) {
-            background: #FFF;
-        }
-
-
-    }
+    font-size: 40px;
+    font-weight: bold;
+    line-height: $grid-unit*5;
+    letter-spacing: normal;
+    margin-top: 0;
+    margin-bottom: $grid-unit*3;
 }
 
 ul {
     list-style: none;
     margin: 0;
     padding-left: 0;
-    margin-bottom: $grid-unit*3;
 }
 
 ul:not([class]) {
@@ -221,11 +122,11 @@ p {
 }
 
 a {
-
-    line-height: 20px;
-
+    color: $color-primary;
+  text-decoration: none;
+    transition: $transition;
 
     &:hover, &:focus {
-
+       color: $color-black;
     }
 }
