--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -24,6 +24,7 @@ $color-astronaut: #232473;
 $color-governorBay: #2E2FB2;
 $color-bunting: #1A1B57;
 
+$color-red: #9F210C;
 //Fonts
 $font-primary: "OpenSans-Regular";
 $font-secondary: "OpenSans-Semibold";
