--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -11,5 +11,7 @@ html(lang="ru")
 		meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
 		link(rel="stylesheet" href="../styles/main.css")
 	body
+		block header
 		block content
+		block footer
 		block scripts
