--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -2,3 +2,4 @@
 @import "header-additional/__languages/header-additional__languages";
 @import "header-main/__logo/header-main__logo";
 @import "header-main/__nav/header-main__nav";
+@import "news-item/news-item";
