--- a/src/blocks/modules/news/news.pug
+++ b/src/blocks/modules/news/news.pug
@@ -6,3 +6,23 @@
 			- var newsDate = '2 декабря 2019';
 			- var newsDesc = 'Физарум//Перформер, 2019, Bioroboty019 это мультимедийный перформанс о связи человеческого и нечеловеческого, представленный на Кураторском форуме в Молодёжный...';
 			include ../../components/news-item/news-item
+			- var newsSrc = '/img/img/img_news-2.jpg';
+			- var newsDate = '2 декабря 2019';
+			- var newsDesc = 'Среди теоретических дисциплин особое место отводится «Теории вероятностей», «Дискретной математике», «Теории автоматического управления» и др.';
+			include ../../components/news-item/news-item
+			- var newsSrc = '/img/img/img_news-3.jpg';
+			- var newsDate = '2 декабря 2019';
+			- var newsDesc = 'В специализации «Мехатроника» упор сделан на изучение дисциплин, посвященных проектированию и конструированию различных мехатронных и робототехнических...';
+			include ../../components/news-item/news-item
+			- var newsSrc = '/img/img/img_news-1.jpg';
+			- var newsDate = '2 декабря 2019';
+			- var newsDesc = 'Третья специализация специально создана для тех, кто уже в школах получил достаточно хорошую подготовку, позволяющую воспринимать знания на более...';
+			include ../../components/news-item/news-item
+			- var newsSrc = '/img/img/img_news-2.jpg';
+			- var newsDate = '2 декабря 2019';
+			- var newsDesc = 'Небольшие группы и интересные дополнительные дисциплины позволяют получить максимальный эффект от учебного процесса по направлению «Мехатроника и...';
+			include ../../components/news-item/news-item
+			- var newsSrc = '/img/img/img_news-3.jpg';
+			- var newsDate = '2 декабря 2019';
+			- var newsDesc = 'Развить навыки эффективного использования современных информационных технологий при создании робототехнических и мехатронных комплексов и систем.';
+			include ../../components/news-item/news-item
