--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -9,26 +9,26 @@
     padding: 0 $grid-unit*2;
     margin-right: auto;
     margin-left: auto;
-    max-width: 1954px;
+    max-width: 1986px;
 
     @media (max-width: 1919px) and (min-width: $hd) {
-        max-width: 1408px;
+        max-width: 1440px;
     }
 
     @media (max-width: $hd - 1px) and (min-width: $xl) {
-       max-width: 1216px;
+       max-width: 1248px;
     }
 
     @media (max-width: $xl - 1px) and (min-width: $l) {
-        max-width: 928px;
+        max-width: 960px;
     }
 
     @media (max-width: $l - 1px) and (min-width: $md) {
-        max-width: 640px;
+        max-width: 672px;
     }
 
     @media (max-width: $md - 1px) and (min-width: $s) {
-        max-width: 288px;
+        max-width: 320px;
     }
 }
 
@@ -37,6 +37,10 @@
     flex-wrap: wrap;
     margin-right: -$grid-unit*2;
     margin-left: -$grid-unit*2;
+}
+
+@mixin col {
+    padding: 0 $grid-unit*2;
 }
 
 @mixin noSelect {
