--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -32,6 +32,7 @@ $font-tertiary: "Muller-Bold";
 
 //Grid
 $grid-unit: 8px;
+$col-hd-extra: $grid-unit*13;
 $col-hd: $grid-unit*11;
 $col-xl: $grid-unit*9;
 $col-l: $grid-unit*6;
