footer is added

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -3,3 +3,9 @@
 @import "header-main/__logo/header-main__logo";
 @import "header-main/__nav/header-main__nav";
 @import "news-item/news-item";
+@import "footer-main/__address/footer-main__address";
+@import "footer-main/__contacts/footer-main__contacts";
+@import "footer-main/__copyright/footer-main__copyright";
+@import "footer-main/__logo/footer-main__logo";
+@import "footer-main/__menu/footer-main__menu";
+@import "footer-main/__social/footer-main__social";
