--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -5,3 +5,5 @@
 @import "news/news";
 @import "slider/slider";
 @import "footer/footer";
+@import "footer-main/footer-main";
+@import "footer-extra/footer-extra";
