--- a/src/blocks/components/header-additional/__logo/header-additional__logo.scss
+++ b/src/blocks/components/header-additional/__logo/header-additional__logo.scss
@@ -1,4 +1,9 @@
 .header-additional__logo {
     width: 162px;
     height: 16px;
+
+    &-link {
+        display: block;
+        line-height: 1;
+    }
 }
