--- a/src/blocks/components/news-item/news-item.scss
+++ b/src/blocks/components/news-item/news-item.scss
@@ -2,6 +2,11 @@
     background-color: $color-white;
     border-radius: 16px;
     box-shadow: 0 0 16px rgba(0, 0, 0, 0.16);
+    transition: $transition;
+
+    &:hover, &:focus {
+        box-shadow: 0 0 16px rgba(0, 0, 0, 0.26);
+    }
 
     &__img-link {
         display: block;
