--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -32,6 +32,26 @@
     }
 }
 
+@mixin container-md {
+    width: 100%;
+    padding: 0 $grid-unit*2;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1248px;
+
+    @media (max-width: $hd - 1px) and (min-width: $xl) {
+        max-width: 960px;
+    }
+
+    @media (max-width: $xl - 1px) and (min-width: $l) {
+        max-width: 672px;
+    }
+
+    @media (max-width: $l - 1px) and (min-width: $s) {
+        max-width: 320px;
+    }
+}
+
 @mixin row {
     display: flex;
     flex-wrap: wrap;
