slider is added

--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -3,7 +3,7 @@
 @import "header-main/header-main";
 @import "main/main";
 @import "news/news";
-@import "slider/slider";
+@import "main-slider/main-slider";
 @import "footer/footer";
 @import "footer-main/footer-main";
 @import "footer-extra/footer-extra";
