accordion is started

--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -4,6 +4,7 @@
 @import "main/main";
 @import "news/news";
 @import "main-slider/main-slider";
+@import "accordion/accordion";
 @import "footer/footer";
 @import "footer-main/footer-main";
 @import "footer-extra/footer-extra";
