--- a/src/blocks/modules/main-slider/main-slider.scss
+++ b/src/blocks/modules/main-slider/main-slider.scss
@@ -29,6 +29,7 @@
 
     &__slide-desc {
         font-family: $font-secondary;
+        font-weight: 600;
         font-size: 18px;
         line-height: $grid-unit*4;
         color: $color-selago;
