--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -5,6 +5,7 @@
 @import "news/news";
 @import "main-slider/main-slider";
 @import "accordion/accordion";
+@import "map/map";
 @import "footer/footer";
 @import "footer-main/footer-main";
 @import "footer-extra/footer-extra";
