--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -10,6 +10,7 @@ html(lang="ru")
 		meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
 		meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
 		link(rel="stylesheet" href="../styles/main.css")
+		script(src="https://api-maps.yandex.ru/2.1/?apikey=cad923f4-1ea6-4177-b27b-4ad7a9b3ee67&lang=ru_RU" type="text/javascript")
 	body
 		block header
 		block content
