--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -6,6 +6,7 @@
 @import "main-slider/main-slider";
 @import "accordion/accordion";
 @import "map/map";
+@import "modal/modal";
 @import "footer/footer";
 @import "footer-main/footer-main";
 @import "footer-extra/footer-extra";
