--- a/src/styles/base/_form_elements.scss
+++ b/src/styles/base/_form_elements.scss
@@ -64,65 +64,78 @@ button[disabled] {
 //Fast-fix ENDs
 
 input {
-    width: $grid-unit*34;
-    padding: 15px $grid-unit*3;
-    line-height: 1;
+    font-size: 14px;
+    line-height: 19px;
+    color: $color-primary;
+    padding: 10px $grid-unit*2 10px $grid-unit*2;
     background: #FFFFFF;
-    color: $color-black;
-    border: 1px solid $color-selago;
+    border: 1px solid $color-iron;
+    border-radius: 2px;
     transition: $transition;
 
+    &::placeholder {
+        color: $color-iron;
+    }
+
     &:active, &:focus, &:hover {
-        border-color: $color-primary;
         outline: none;
-        box-shadow: none;
     }
 }
 
-.input-vue {
-    position: relative;
-    padding-top: $grid-unit*3;
+.input--wrapper {
+    margin-bottom: $grid-unit*3;
 
     label {
-        position: absolute;
-        left: $grid-unit*3;
-        top: 37px;
+        display: block;
+        font-family: $font-secondary;
+        font-weight: 600;
         font-size: 14px;
         line-height: $grid-unit*3;
-        color: $color-black;
-        transition: $transition;
-    }
+        margin-bottom: $grid-unit;
 
-    &_filled {
-        label {
-            top: 0;
-            font-size: 12px;
-        }
-    }
+        &.input__label--required {
 
-    &_error {
-        input {
-            border-color: $color-red;
-        }
-
-        .error-text {
-            width: $grid-unit*36;
-            margin-top: $grid-unit;
-            padding-left: $grid-unit*3;
-            font-size: 12px;
-            line-height: 16px;
-            letter-spacing: 0.15px;
-            color: $color-red;
+            &:after {
+                content: ' *';
+                color: $color-red;
+            }
         }
     }
 }
 
-.textarea {
+textarea {
     display: block;
     width: 100%;
     height: 100px;
-    padding: $grid-unit*2;
+    font-size: 14px;
+    line-height: 19px;
+    color: $color-primary;
+    padding: 10px $grid-unit*2 10px $grid-unit*2;
+    background: #FFFFFF;
+    border: 1px solid $color-iron;
+    border-radius: 2px;
+    transition: $transition;
+
+    &::placeholder {
+        color: $color-iron;
+    }
+
+
 }
+
+.textarea--wrapper {
+    margin-bottom: $grid-unit*3;
+
+    label {
+        display: block;
+        font-family: $font-secondary;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: $grid-unit*3;
+        margin-bottom: $grid-unit;
+    }
+}
+
 
 .close-link {
     position: absolute;
@@ -134,7 +147,7 @@ input {
     cursor: pointer;
 
     svg.icon {
-        fill: #B4B4B4;
+        fill: $color-black;
     }
 
     &:hover, &:focus {
