modal is updated

--- a/src/blocks/modules/footer/footer.pug
+++ b/src/blocks/modules/footer/footer.pug
@@ -3,3 +3,4 @@
 		include ../footer-main/footer-main
 		include ../footer-extra/footer-extra
 		include ../modal/modal
+		include ../modal-thanks/modal-thanks
