mobile is started

--- a/src/blocks/components/header-main/__nav/header-main__nav.scss
+++ b/src/blocks/components/header-main/__nav/header-main__nav.scss
@@ -1,5 +1,9 @@
 .header-main__nav {
 
+    @media (max-width: 768px) {
+        display: none;
+    }
+
     &-list {
         display: flex;
         align-items: center;
