--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -1,12 +1,14 @@
 @import "header/header";
 @import "header-additional/header-additional";
 @import "header-main/header-main";
+@import "header-burgermenu/header-burgermenu";
 @import "main/main";
 @import "news/news";
 @import "main-slider/main-slider";
 @import "accordion/accordion";
 @import "map/map";
 @import "modal/modal";
+@import "modal-thanks/modal-thanks";
 @import "footer/footer";
 @import "footer-main/footer-main";
 @import "footer-extra/footer-extra";
