--- a/src/blocks/modules/header-main/header-main.pug
+++ b/src/blocks/modules/header-main/header-main.pug
@@ -2,3 +2,4 @@
 	.header-main
 		include ../../components/header-main/__logo/header-main__logo
 		include ../../components/header-main/__nav/header-main__nav
+		include ../header-burgermenu/header-burgermenu
