--- a/src/blocks/components/header-main/__logo/header-main__logo.scss
+++ b/src/blocks/components/header-main/__logo/header-main__logo.scss
@@ -3,6 +3,12 @@
     align-items: center;
     justify-content: flex-start;
 
+    img {
+        @media (max-width: 768px) {
+            max-width: 25px;
+        }
+    }
+
 
     &-name {
         @include noSelect;
@@ -10,5 +16,11 @@
         font-size: 28px;
         line-height: 28px;
         margin-left: $grid-unit*2;
+
+        @media (max-width: 768px) {
+            font-size: 16px;
+            line-height: 16px;
+            margin-left: $grid-unit;
+        }
     }
 }
