--- a/src/blocks/components/header-main/__nav/header-main__nav.scss
+++ b/src/blocks/components/header-main/__nav/header-main__nav.scss
@@ -10,12 +10,22 @@
         justify-content: flex-end;
         font-size: 16px;
         line-height: $grid-unit*3;
+
+        @media (max-width: 768px) {
+            flex-direction: column;
+            align-items: flex-start;
+        }
     }
   
     &-item {
         margin-left: $grid-unit*5;
 
         &:first-of-type {
+            margin-left: 0;
+        }
+
+        @media (max-width: 768px) {
+            color: $color-white;
             margin-left: 0;
         }
     }
@@ -26,6 +36,19 @@
 
         &:hover, &:focus {
             color: $color-black;
+        }
+
+        @media (max-width: 768px) {
+            display: block;
+            font-family: $font-secondary;
+            font-weight: 600;
+            padding: 1rem 0;
+            color: $color-white;
+            line-height: 1;
+
+            &:hover, &:focus {
+                color: $color-white;
+            }
         }
     }
 }
