--- a/src/blocks/modules/footer-extra/footer-extra.scss
+++ b/src/blocks/modules/footer-extra/footer-extra.scss
@@ -4,6 +4,11 @@
     align-items: center;
     justify-content: space-between;
 
+    @media (max-width:768px) {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
     &__link {
         font-size: 13px;
         line-height: 18px;
@@ -14,6 +19,10 @@
 
         &:hover, &:focus {
             opacity: 0.8;
+        }
+
+        @media (max-width:768px) {
+            margin-bottom: $grid-unit;
         }
     }
 
