--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -1,10 +1,14 @@
 .header {
+  @media (max-width: 768px) {
+    width: 100%;
+    position: fixed;
+    z-index: 3;
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.16);
+  }
 
   &__mobile-open {
     @media (max-width: 768px) {
-      position: fixed;
       background: #003e96;
-      z-index: 3;
 
       .header-main__nav {
           position: absolute;
@@ -13,7 +17,7 @@
           right: 0;
           left: 0;
           padding: 16px;
-          height: calc(100vh - 64px);
+          height: calc(100vh - 104px);
           background: #0049b0;
       }
     }
