--- a/src/blocks/modules/news/news.scss
+++ b/src/blocks/modules/news/news.scss
@@ -13,5 +13,9 @@
     &--wrapper {
         @include container-md;
         margin-bottom: $grid-unit*10;
+
+        @media (max-width: 768px) {
+            margin-bottom: 40px;
+        }
     }
 }
