--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -6,6 +6,11 @@ h1, .h1 {
     letter-spacing: 0.01em;
     margin-top: 0;
     margin-bottom: $grid-unit*4;
+
+    @media (max-width: 768px) {
+        font-size: 36px;
+        line-height: 36px;
+    }
 }
 
 h2, .h2 {
@@ -16,6 +21,11 @@ h2, .h2 {
     letter-spacing: normal;
     margin-top: 0;
     margin-bottom: $grid-unit*3;
+
+    @media (max-width: 768px) {
+        font-size: 30px;
+        line-height: 30px;
+    }
 }
 
 h3, .h3 {
@@ -26,6 +36,11 @@ h3, .h3 {
     letter-spacing: normal;
     margin-top: 0;
     margin-bottom: $grid-unit*3;
+
+    @media (max-width: 768px) {
+        font-size: 28px;
+        line-height: 28px;
+    }
 }
 
 ul {
