--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1523,7 +1523,7 @@ textarea::placeholder {
   vertical-align: middle;
   width: 16px;
   height: 16px;
-  background-image: url("/img/sprites/sprite.svg#ico_mail");
+  background-image: url("../img/sprites/sprite.svg#ico_mail");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
